	   preliminary patch (Closes: #511299)
    handler changes
	maildir:
	 . fix location of deleted_on file
	 . add missing destid_file options to ssh connections
	mysql:
	 . Options passed to mysqldump are now customizable with the new
	   sqldumpoptions configuration variable. Thanks to Chris Lamb for his
	   preliminary patch (Closes: #502966)

version 0.9.6 -- July 21, 2008
    backupninja changes
	 . fix bug in cstream definition, thanks Jamie McClelland
	 . Allow the entire backup run to be halted by an action, thanks to
	   Matthew Palmer (Closes: #455836)
	 . Fixed tr construct reporting a warning (Closes: #452669)
    lib changes
	vserver:
	 . added vservers_running function
	tools
	 . mktemp is now required to run backupninja, removed less secure
	   fall-back if mktemp did not exist on the system
    handler changes
	dup:
	 . General cleanup
	 . Better support for new duplicity (>= 0.4.4) command line syntax:
	   run remove-older-than when $keep is not set to yes (Closes: #458816),
	   and run "duplicity cleanup" before any other duplicity command; both
	   only trigger a warning on failure, since they should not stop backups
	   from being done. Also migrated full/incremental backup switch to the
	   new syntax.
	 . Support every duplicity-supported transport with new configuration
	   option desturl (Closes: #483712, #346040, Trac#2).
	 . Actually allow to backup only VServers, by relaxing $include test.
	 . Set secure permissions on tmpdir when creating it.
	ldap:
	 . support HDB backend just as the BDB one, and make message clearer
	   when no supported backend is found (Closes: #476910)
	rdiff:
	 . Fixed ignore_version default value missing
	 . Add patch from Matthew Palmer to rdiff handler to incorporate sshoptions
	   into options via remote-schema not already specified (Closes: #424639)
	wget:
	 . New handler from rhatto designed to incrementally pull content from
	   a website to a local folder, based on the rsync handler
	maildir: